# aera-exp

./: Cargo.toml  build.rs
protobuf/: tcp_data_message.proto
src/: main.rs
src/interfaces/: mod.rs  tcp_interface.rs
src/runtime/: mod.rs  pattern_matching.rs  runtime_main.rs  seed.rs  simulation.rs  simulation_frames.rs  utils.rs
src/runtime/learning/: cst.rs  ctpx.rs  full_causal_model_comparison.rs  mod.rs  model_comparison.rs  ptpx.rs  utils.rs
src/runtime/seeds/: hand_grab_sphere.rs  hand_grab_sphere_learn.rs  mod.rs  robot_advanced_move.rs  robot_sift_learn.rs  robot_sift_learn_2.rs  robot_sift_learn_3.rs  scenario_2.rs
src/runtime/simulation/: backward.rs  forward.rs  mod.rs  sim_debugger.rs
src/types/: cst.rs  functions.rs  mod.rs  models.rs  pattern.rs  runtime.rs  value.rs
src/utils/: math.rs  mod.rs
src/visualize/: mod.rs
