[package]
name = "aera-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
itertools = "0.14.0"
log = "0.4.25"
tap = "1.0.1"
prost = "0.13.4"
simple-log = "2.1.1"
piston_window = "0.132.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[build-dependencies]
prost-build = "0.13.4"
